<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lesson_01_what_is_ros2</name>
  <version>1.0.0</version>
  <description>Lesson 01: What is ROS2? A minimal C++20 hello-world program.</description>
  <maintainer email="student@ros2tutorial.dev">ROS2 Tutorial</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
