<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lesson_07_topic_publisher</name>
  <version>0.1.0</version>
  <description>Lesson 07: Creating a topic publisher with std_msgs::msg::Int32.</description>
  <maintainer email="student@ros2tutorial.dev">ROS2 Tutorial</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
