<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lesson_17_launch_basics</name>
  <version>0.1.0</version>
  <description>Lesson 17: Launch file basics — Python and XML launch files.</description>
  <maintainer email="student@ros2tutorial.dev">ROS2 Tutorial</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lesson_07_topic_publisher</exec_depend>
  <exec_depend>lesson_08_topic_subscriber</exec_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>std_msgs</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
