<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lesson_18_launch_advanced</name>
  <version>0.1.0</version>
  <description>Lesson 18: Advanced launch — composition, conditions, namespaces, YAML params.</description>
  <maintainer email="student@ros2tutorial.dev">ROS2 Tutorial</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lesson_07_topic_publisher</exec_depend>
  <exec_depend>lesson_08_topic_subscriber</exec_depend>
  <exec_depend>lesson_15_parameters</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
